fix heading margin on mobile

--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -1,8 +1,12 @@
 body {
-
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: var(--headingFont);
   color: var(--eggshell);
 }
@@ -21,18 +25,23 @@ p {
   @include font-size(13);
   border-top: var(--line);
   padding-top: 0.5rem;
-  margin: 0;
+  margin: 0 0 2rem;
 }
 
 .content-title {
   margin-bottom: 0.5rem;
-  color:var(--aqua);
+  color: var(--aqua);
 }
 
 .body-content {
   max-width: 600px;
 
-  h1,h2,h3,h4,h5,h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     color: var(--aqua);
     font-weight: 400;
     @include font-size(16);
